enable health checks and metrics
Signed-off-by: mightbesimon <60593422+mightbesimon@users.noreply.github.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
       - TZ=Europe/Paris
       - N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS=true
       - N8N_RUNNERS_ENABLED=true
+      - N8N_METRICS=true
+      - QUEUE_HEALTH_CHECK_ACTIVE=true
     volumes:
       - n8n_volume:/home/node/.n8n
     networks:
