add nginx status endpoint for observability

--- a/n8n.conf
+++ b/n8n.conf
@@ -16,7 +16,7 @@ server
 
 		# WebSocket support for n8n real-time features
 		proxy_set_header Upgrade $http_upgrade;
-		proxy_set_header Connection "upgrade";
+		proxy_set_header Connection upgrade;
 
 		# proxy headers for proper functionality
 		proxy_set_header Host $host;
