--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - TZ=Europe/Paris
       - N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS=true
       - N8N_RUNNERS_ENABLED=false
+      - N8N_PROXY_HOPS=1
       - N8N_PYTHON_BINARY=/usr/bin/python3
       - N8N_METRICS=true
       - QUEUE_HEALTH_CHECK_ACTIVE=true
