--- a/status.conf
+++ b/status.conf
@@ -3,12 +3,12 @@ server
 	listen localhost;
 	server_name status.localhost;
 	keepalive_timeout 0;
-	# access_log off;
 	allow 127.0.0.1;
 	deny all;
 
 	location /nginx_status
 	{
 		stub_status on;
+		access_log off;
 	}
 }
